--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,5 @@
-# Domain
-# This would be set to the production domain with an env var on deployment
-DOMAIN=frontend.ajotham.link
-#DOMAIN=frontend.local
 # Environment: local, staging, production
 ENVIRONMENT=production
-#ENVIRONMENT=local
 PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
@@ -30,3 +25,6 @@ POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=app
 POSTGRES_PASSWORD=changethis123
+
+# Domain
+DOMAIN=frontend.osinachi.mooo.com
