--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 # Domain
-DOMAIN=la.airstripai.com
+DOMAIN=localhost
 
 # Environment: local, staging, production
-ENVIRONMENT=production
+ENVIRONMENT=local
 PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
