--- a/data/nginx/proxy_host/2.conf
+++ b/data/nginx/proxy_host/2.conf
@@ -1,5 +1,5 @@
 # ------------------------------------------------------------
-# frontend.local
+# localhost
 # ------------------------------------------------------------
 
 
@@ -11,13 +11,13 @@ map $scheme $hsts_header {
 server {
   set $forward_scheme http;
   set $server         "frontend-container";
-  set $port           3000;
+  set $port           5173;
 
   listen 80;
 listen [::]:80;
 
 
-  server_name frontend.local;
+  server_name localhost;
 
 
 
@@ -34,6 +34,69 @@ listen [::]:80;
   error_log /data/logs/proxy-host-2_error.log warn;
 
 
+
+  location /api {
+    
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Scheme $scheme;
+    proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_set_header X-Forwarded-For    $remote_addr;
+    proxy_set_header X-Real-IP		$remote_addr;
+    proxy_pass       http://backend-container:8000/api;
+
+    
+
+    
+    
+    
+    
+
+
+    
+  }
+
+  location /docs {
+    
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Scheme $scheme;
+    proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_set_header X-Forwarded-For    $remote_addr;
+    proxy_set_header X-Real-IP		$remote_addr;
+    proxy_pass       http://backend-container:8000/docs;
+
+    
+
+    
+    
+    
+    
+
+
+    
+  }
+
+  location /redoc {
+    
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Scheme $scheme;
+    proxy_set_header X-Forwarded-Proto  $scheme;
+    proxy_set_header X-Forwarded-For    $remote_addr;
+    proxy_set_header X-Real-IP		$remote_addr;
+    proxy_pass       http://backend-container:8000/redoc;
+
+    
+
+    
+    
+    
+    
+
+
+    
+  }
 
 
 
@@ -56,3 +119,4 @@ listen [::]:80;
   # Custom
   include /data/nginx/custom/server_proxy[.]conf;
 }
+
