--- a/data/nginx/proxy_host/5.conf
+++ b/data/nginx/proxy_host/5.conf
@@ -1,5 +1,5 @@
 # ------------------------------------------------------------
-# redoc.local
+# proxy.localhost
 # ------------------------------------------------------------
 
 
@@ -10,14 +10,14 @@ map $scheme $hsts_header {
 
 server {
   set $forward_scheme http;
-  set $server         "backend-container";
-  set $port           8000;
+  set $server         "nginx-proxy";
+  set $port           81;
 
   listen 80;
 listen [::]:80;
 
 
-  server_name redoc.local;
+  server_name proxy.localhost;
 
 
 
@@ -77,3 +77,4 @@ listen [::]:80;
   # Custom
   include /data/nginx/custom/server_proxy[.]conf;
 }
+
