--- a/data/nginx/proxy_host/6.conf
+++ b/data/nginx/proxy_host/6.conf
@@ -1,5 +1,5 @@
 # ------------------------------------------------------------
-# adminer.local
+# db.localhost
 # ------------------------------------------------------------
 
 
@@ -17,7 +17,7 @@ server {
 listen [::]:80;
 
 
-  server_name adminer.local;
+  server_name db.localhost;
 
 
 
@@ -56,3 +56,4 @@ listen [::]:80;
   # Custom
   include /data/nginx/custom/server_proxy[.]conf;
 }
+
